Production/01-02-2025/force-app/main/default/objects/Campaign/Campaign.object-meta.xml
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>