Production/01-02-2025/force-app/main/default/objects/Campaign/fields/Event_Recap__c.field-meta.xml
<CustomField>
    <fullName>Event_Recap__c</fullName>
    <label>Event Recap</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>