Production/01-02-2025/force-app/main/default/objects/Campaign/fields/Organizing_Team__c.field-meta.xml
<CustomField>
    <fullName>Organizing_Team__c</fullName>
    <inlineHelpText>For Eyeota organized events only.</inlineHelpText>
    <label>Organizing Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>Americas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>